@@ -525,11 +525,27 @@ class SvnRepository(ForeignRepository):
             self._layout_source = LAYOUT_SOURCE_REGISTRY
         if self._layout is None:
             if self._guessed_appropriate_layout is None:
-                (self._guessed_layout, self._guessed_appropriate_layout) = repository_guess_layout(self, 
-                    self.get_latest_revnum(), self._hinted_branch_path)
+                self._find_guessed_layout()
             self._layout_source = LAYOUT_SOURCE_GUESSED
             self._layout = self._guessed_appropriate_layout
         return self._layout, self._layout_source
+
+    def _find_guessed_layout(self):
+        # TODO: Retrieve guessed-layout from config and see if it accepts self._hinted_branch_path
+        layoutname = self.get_config().get_guessed_layout()
+        if layoutname is not None:
+            config_guessed_layout = layout.layout_registry.get(layoutname)()
+            if self._hinted_branch_path is None or config_guessed_layout.is_branch(self._hinted_branch_path):
+                self._guessed_layout = config_guessed_layout
+                self._guessed_appropriate_layout = config_guessed_layout
+                return
+        else:
+            config_guessed_layout = None
+        revnum = self.get_latest_revnum()
+        (self._guessed_layout, self._guessed_appropriate_layout) = repository_guess_layout(self, 
+                    revnum, self._hinted_branch_path)
+        if self._guessed_layout != config_guessed_layout and revnum > 200:
+            self.get_config().set_guessed_layout(self._guessed_layout)
 
     def get_guessed_layout(self):
         """Retrieve the layout bzr-svn deems most appropriate for this repo.
@@ -540,8 +556,7 @@ class SvnRepository(ForeignRepository):
         if self._guessed_layout is None:
             self._guessed_layout = self.get_mapping().get_guessed_layout(self)
         if self._guessed_layout is None:
-            (self._guessed_layout, self._guessed_appropriate_layout) = repository_guess_layout(self, 
-                    self.get_latest_revnum(), self._hinted_branch_path)
+            self._find_guessed_layout()
         return self._guessed_layout
 
     def _warn_if_deprecated(self):
